# caliptra-sw

./: Cargo.toml
builder/src/: lib.rs
common/fips/: Cargo.toml
common/fips/src/: lib.rs
common/src/: lib.rs  registry.rs
coverage/: Cargo.toml
coverage/src/: analyzer.rs  disasm.rs  lib.rs  main.rs
drivers/src/: hand_off.rs  lms.rs
drivers/tests/drivers_integration_tests/: main.rs
error/src/: lib.rs
fmc/: Cargo.toml  build.rs
fmc/src/: fmc_env.rs  hand_off.rs  main.rs
fmc/src/flow/: pcr.rs
fmc/test-fw/test-rt/: Cargo.toml
fmc/test-fw/test-rt/src/: interactive_test.rs  main.rs
fmc/tests/: test_rtalias.rs
hw-model/src/: lib.rs  model_emulated.rs
hw-model/tests/: model_tests.rs
image/elf/src/: lib.rs
rom/dev/src/flow/: update_reset.rs
rom/dev/tests/: test_update_reset.rs
runtime/: Cargo.toml  build.rs
runtime/fips/: Cargo.toml  README.md
runtime/fips/src/: lib.rs
runtime/src/: lib.rs
sw-emulator/app/src/: main.rs
sw-emulator/lib/cpu/src/: cpu.rs
sw-emulator/lib/periph/src/: hash_sha256.rs
test/src/: lib.rs  text_section_parser.rs  trace_parser.rs
test/tests/: fake_collateral_boot_test.rs  smoke_test.rs
